@@ -26,7 +26,7 @@
   */
 
 #include "globaluri.h"
-#include "boost/filesystem/operations.hpp"
+//#include "boost/filesystem/operations.hpp"
 #include "boost/filesystem/path.hpp"
 
 #include "../config.h"
